feat: migrate  a chunk of meteor-settings.json to configurable settings
