# meteor/server/lib/rest/v1/studios.ts
@@ -228,4 +228,9 @@ export interface APIStudioSettings {
 	shelfAdlibButtonSize?: Exclude<ShelfButtonSize, ShelfButtonSize.INHERIT>
 	mockPieceContentStatus?: boolean
 	rundownGlobalPiecesPrepareTime?: number
+	autoRewindLeavingSegment?: boolean
+	disableBlurBorder?: boolean
+	allowGrabbingTimeline?: boolean
+	useCountdownToFreezeFrame?: boolean
+	defaultDisplayDuration?: number
 }
